--- a/src/ui.html
+++ b/src/ui.html
@@ -139,54 +139,6 @@
         max-height: 100%;
         padding-right: 4px;
       }
-      .sidebar-footer {
-        margin-top: auto;
-        padding: 24px 24px 12px 12px;
-        border-top: 1px solid #ececf2;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-      }
-      .filter-toggle {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        font-size: 13px;
-        color: #111;
-      }
-      .filter-toggle span {
-        flex: 1;
-      }
-      .filter-toggle input {
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        border: 1px solid #111;
-        background: transparent;
-        cursor: pointer;
-        appearance: none;
-        -webkit-appearance: none;
-        position: relative;
-        transition:
-          background 0.15s ease,
-          border-color 0.15s ease;
-      }
-      .filter-toggle input::after {
-        content: '';
-        position: absolute;
-        inset: 4px;
-        border-radius: 50%;
-        background: #fff;
-        opacity: 0;
-        transition: opacity 0.15s ease;
-      }
-      .filter-toggle input:checked {
-        background: #111;
-        border-color: #111;
-      }
-      .filter-toggle input:checked::after {
-        opacity: 1;
-      }
       .main {
         display: flex;
         flex-direction: column;
@@ -494,12 +446,6 @@
       <div class="workspace">
         <aside class="sidebar">
           <div id="tabs"></div>
-          <div class="sidebar-footer">
-            <label class="filter-toggle">
-              <span>Только видимые</span>
-              <input type="checkbox" id="filter-visible" checked />
-            </label>
-          </div>
         </aside>
         <main class="main">
           <section id="gpt-card" class="gpt-card hidden" hidden aria-hidden="true">
@@ -589,22 +535,9 @@
           return current;
         }
 
-        /**
-         * Выбирает основное значение (visible vs raw) для текущего фильтра,
-         * чтобы UI не дублировал логику фильтрации видимости.
-         */
         function resolveViewArray(path) {
-          const primary = filters.visibleOnly
-            ? currentVisibleViews ?? currentResults?.visibleViews
-            : currentResults?.views;
-          const fallback = filters.visibleOnly
-            ? currentResults?.views
-            : currentVisibleViews ?? currentResults?.visibleViews;
-          const primaryValue = getValueFromPath(primary, path);
-          if (Array.isArray(primaryValue)) return primaryValue;
-          const fallbackValue = getValueFromPath(fallback, path);
-          if (Array.isArray(fallbackValue)) return fallbackValue;
-          return [];
+          const value = getValueFromPath(currentResults?.views, path);
+          return Array.isArray(value) ? value : [];
         }
 
         function getTabSource(tabId) {
@@ -637,7 +570,6 @@
 
         let currentTab = 'current';
         let currentResults = null;
-        let currentVisibleViews = null;
         let isScanning = false;
         let catalogsReady = false;
         let catalogsLoading = true;
@@ -657,16 +589,11 @@
         const listContainer = document.getElementById('results');
         const summaryCountEl = document.getElementById('summary-count');
         const toastEl = document.getElementById('toast');
-        const filterVisibleEl = document.getElementById('filter-visible');
-          const gptInputEl = document.getElementById('gpt-input');
-          const gptFillButton = document.getElementById('gpt-fill-button');
-          const gptSubmitButton = document.getElementById('gpt-submit');
-          const gptStatusEl = document.getElementById('gpt-status');
-          const gptResultEl = document.getElementById('gpt-result');
-
-        const filters = {
-          visibleOnly: true,
-        };
+        const gptInputEl = document.getElementById('gpt-input');
+        const gptFillButton = document.getElementById('gpt-fill-button');
+        const gptSubmitButton = document.getElementById('gpt-submit');
+        const gptStatusEl = document.getElementById('gpt-status');
+        const gptResultEl = document.getElementById('gpt-result');
         let gptRequestInProgress = false;
         let gptHasManualText = false;
 
@@ -696,25 +623,9 @@
           };
         }
 
-        initFilterControls();
         setScanningState(false);
 
         initGptControls();
-
-        /* ========== Инициализация фильтров и событий ======= */
-        /**
-         * Инициализирует UI-фильтры и заставляет список перерисовываться и обновлять бейджи.
-         */
-        function initFilterControls() {
-          if (filterVisibleEl instanceof HTMLInputElement) {
-            filters.visibleOnly = filterVisibleEl.checked;
-            filterVisibleEl.addEventListener('change', () => {
-              filters.visibleOnly = filterVisibleEl.checked;
-              renderList();
-              updateActiveTabClasses();
-            });
-          }
-        }
 
         function initGptControls() {
           if (gptFillButton instanceof HTMLButtonElement) {
@@ -876,10 +787,7 @@
          */
         function prepareChangeDiffs(item) {
           const rawDiffs = Array.isArray(item.diffs) ? item.diffs : [];
-          const visibleDiffs = filters.visibleOnly
-            ? rawDiffs.filter((diff) => diff.visible !== false)
-            : rawDiffs.slice();
-          return dedupeDiffs(visibleDiffs);
+          return dedupeDiffs(rawDiffs.slice());
         }
 
         const TRIVIAL_SEGMENT_TEXTS = new Set(['—', '–', '-', 'ok']);
@@ -1428,7 +1336,6 @@
 
           if (msg.type === 'scan-result') {
             currentResults = msg.payload;
-            currentVisibleViews = msg.payload?.visibleViews ?? null;
             expandedNodes.clear();
             updateSummaryCount(currentResults);
             scanCompleted = true;
